fix z-index menu item navbar

--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -127,7 +127,7 @@ a  {
 
 .fsp-subitem-navbar{
     position: absolute;
-    z-index: 1;
+    z-index: 10;
     transform: scaleY(0);
     transform-origin: top center;
     /* transform: translate(0,-10em); */
